Implemented storage of invoice items in DBMS
Implement logic to store invoice items in DBMS and to display them.  Added
option to invoice-list to choose between headers only and full invoice
output.
